syntax="proto3";
package like;

service LikeService {
    rpc sendMessage (Like) returns (Result) {}
}

message Like {
    uint64 fromUserId = 1;
    string fromUserName = 2;
    uint64 toUserId = 3;
    uint64 postId = 4;
}

message Result {
    bool res = 1;
}
